--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Debugging, conditional statements, functions\n",
     "\n",
-    "In this lesson, we will focus on finding and correcting errors in code; making decisions; and using functions. By the end of the session, you should be able to:\n\n",
-    "1.\tread Python error messages and fix the code.\n\n",
-    "2.\tuse if/elsif/else statements in Python to make decisions.\n\n",
-    "3.\tcreate and call your own functions to do calculations.\n\n",
+    "In this lesson, we will focus on finding and correcting errors in code; making decisions; and using functions. By the end of the session, you should be able to:\n",
+    "1.\tread Python error messages and fix the code.\n",
+    "2.\tuse if/elsif/else statements in Python to make decisions.\n",
+    "3.\tcreate and call your own functions to do calculations.\n",
     "\n",
     "## Debugging - finding and correcting errors in your code\n",
     "\n",
@@ -43,14 +43,18 @@
    "metadata": {},
    "source": [
     "Copy the code above into a script and run it. In the shell, you should get the following:\n",
+    "\n",
     "<img src=\"./img/debug_error.PNG\" alt=\"error messages\" align='center' style=\"width: 800px;\"/>\n",
+    "\n",
     "The ouput in the shell is pointing to a syntax error in line 2. In Thonny, on the right hand side an assistant window also opens up, which provides additional information on the error.\n",
+    "\n",
     "<img src=\"./img/assistant_window.PNG\" alt=\"error messages\" align='center' style=\"width: 600px;\"/>\n",
+    "\n",
     "The assistant is saying that the closing quotation mark is missing in the `print` statement.\n",
     "When a program does not run read the messages that Thonny is giving you to help fix the code.\n",
     "\n",
     "## Exercises\n",
-    "1.\tCorrect the remaining errors in the script above.\n\n",
+    "1.\tCorrect the remaining errors in the script above.\n",
     "2.\tCopy the following code into a script and correct it. Read the messages Thonny is telling you to find the errors."
    ]
   },
@@ -76,7 +80,9 @@
     "## Conditional statements: using if/elseif/else statements to make decisions\n",
     "\n",
     "Conditional statements allow you to execute certain sections of code when you run the program. If a condition is true then a section of code will be executed. If the condition is false then that section of code is skipped.\n",
-    "<img src=\"./img/if.png\" alt=\"error messages\" align='center' style=\"width: 400px;\"/>\n",
+    "\n",
+    "<img src=\"./img/if.PNG\" alt=\"error messages\" align='center' style=\"width: 400px;\"/>\n",
+    "\n",
     "The simplest conditional statement is the if statement. Consider the following code"
    ]
   },
@@ -104,7 +110,8 @@
     "== is called a relational operator or comparison operator. It checks whether the two objects either side of the == are equal. More information on comparison operators can be found [here](https://www.tutorialspoint.com/python/python_basic_operators.htm) or on page 20 of your notes.\n",
     "\n",
     "We can extend the above programme to tell the user if they did not guess the correct number. This is done using an if/else block. In this case if the condition is false then another section of code is executed.\n",
-    "<img src=\"./img/if_else.png\" alt=\"error messages\" align='center' style=\"width: 300px;\"/>"
+    "\n",
+    "<img src=\"./img/if_else.PNG\" alt=\"error messages\" align='center' style=\"width: 300px;\"/>\n"
    ]
   },
   {
@@ -130,7 +137,8 @@
     "Note the spacing of the code in the above example. The `else` statement is aligned with its respective `if` statement. The code after the `if` and `else` statements are indented 4 spaces. This is a requirement in Python.\n",
     "\n",
     "You can programme for more choices using the if/elif/else block.\n",
-    "<img src=\"./img/if_elseif_else.png\" alt=\"error messages\" align='center' style=\"width: 500px;\"/>"
+    "\n",
+    "<img src=\"./img/if_elseif_else.PNG\" alt=\"error messages\" align='center' style=\"width: 500px;\"/>"
    ]
   },
   {
@@ -155,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aside - formatting numbers to fixed number of decimal places\n",
+    "### Aside - formatting numbers to fixed number of deciaml places\n",
     "Note how the number is printed to the shell. It is different to how we did it before. Previously we did something like:"
    ]
   },
@@ -235,8 +243,8 @@
    "source": [
     "Note the effect of the number before the decimal point. This will be useful when we create tables of numbers and we want them to be nicely aligned.\n",
     "## Exercises\n",
-    "Create a Python script to do the following:\n\n",
-    "3.\tAsk the user for any number between 0 and 100. If they input a number outside this range, tell them it is outside the range. Otherwise tell them if it is less than 50 or greater than 50. Format the output so that the number is to three places of decimal.\n\n",
+    "Create a Python script to do the following:\n",
+    "3.\tAsk the user for any number between 0 and 100. If they input a number outside this range, tell them it is outside the range. Otherwise tell them if it is less than 50 or greater than 50. Format the output so that the number is to three places of decimal.\n",
     "\n",
     "## Creating and using functions\n",
     "A function is a block of code that performs an action and can be reused. Functions can accept input and output arguments. This makes them different from the scripts we have written already, which do not accept any arguments.\n",
@@ -279,13 +287,10 @@
     "Functions can be defined in the script file before they are called. They can also be located in another file but in this case they must be imported. For now, we will define the functions in the same file as the script in which they are called.\n",
     "\n",
     "## Exercises\n",
-    "Create Python scripts and functions to do the following:\n\n",
-    
-    "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n\n",
-    
-    "5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n\n",
-    
-    "6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n\n"
+    "Create Python scripts and functions to do the following:\n",
+    "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n",
+    "5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n",
+    "6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n"
    ]
   },
   {
@@ -298,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
