--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -289,8 +289,8 @@
     "## Exercises\n",
     "Create Python scripts and functions to do the following:\n",
     "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n",
-    "5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n",
-    "6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n"
+    "\n5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n",
+    "\n6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n"
    ]
   },
   {
