--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -37,6 +37,8 @@
     "        regme = 'Turbulent'\n",
     "    \n",
     "    return reynolds_no, regime"
+    "print(reynolds(1e-4, 0.5, 1000, 1.5))"
+
    ]
   },
   {
