--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Repetiton - for and while loops\n",
-    "In this lesson, we will focus on doing repetitive tasks. By the end of the lesson, you will be able to:\n\n",
-    "1.\tuse for loops to do repeat blocks of code.\n\n",
-    "2.\tuse while loops to repeat blocks of code.\n\n",
+    "In this lesson, we will focus on doing repetitive tasks. By the end of the lesson, you will be able to:\n",
+    "1.\tuse for loops to do repeat blocks of code.\n",
+    "2.\tuse while loops to repeat blocks of code.\n",
     "\n",
     "## ...but first debug this ...\n",
     "Copy the code into a python file (\\*.py) and correct it. Test the function by calling it from the shell or another script file."
@@ -36,9 +36,9 @@
     "    else reynolds_no > 2100\n",
     "        regme = 'Turbulent'\n",
     "    \n",
-    "    return reynolds_no, regime"
+    "    return reynolds_no, regime\n",
+    "\n",
     "print(reynolds(1e-4, 0.5, 1000, 1.5))"
-
    ]
   },
   {
@@ -150,9 +150,9 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "Create a Python script to:\n\n",
-    "1.\tCalculate the factorial of a user specified number.\n\n",
-    "2.\tCalculate the distance an object travels downwards every second when dropped.\n\n",
+    "Create a Python script to :\n",
+    "1.\tCalculate the factorial of a user specified number.\n",
+    "2.\tCalculate the distance an object travels downwards every second when dropped.\n",
     "\n",
     "## While loops\n",
     "The other method of repeating blocks of code is using a while statement. While loops repeatedly execute a block of code as long as a condition is true."
@@ -227,11 +227,11 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "Create Python scripts to do the following:\n\n",
-    "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether there guess is too low or too high. Use the script you created when doing if statements as a template.\n\n",
-    "4.\tCreate a guessing game similar to the above but using a while loop.\n\n",
-    "5.  Write a script to calculate:\n\n",
-    "$$f(n)=\\frac{1}{e^n-1} for -5\\le n\\le5\\text{, where }n\\text{ is an integer.}$$\n\n",
+    "Create Python scripts to do the following:\n",
+    "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether their guess is too low or too high. Use the script you created when doing if statements as a template.\n",
+    "4.\tCreate a guessing game similar to the above but using a while loop.\n",
+    "5.  Write a script to calculate:\n",
+    "$$f(n)=\\frac{1}{e^n-1} for -5\\le n\\le5\\text{, where }n\\text{ is an integer.}$$\n",
     "Output the results in the form of a table where _n_ is the first column and _f_(_n_) is the second column."
    ]
   },
@@ -245,7 +245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
