--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -15,7 +15,7 @@
     "What is a root? Consider a function $f(x)=x^2-5x+6$. A root of the equation $f(x)$ is a value $x_0$ such that $f(x_0)=0$. In this case, $f(x)$ has two roots: $x=2$ and $x=3$.\n",
     "$$f(2)=2^2-5 \\times 2 + 6 = 0$$ \n",
     " \n",
-    "If we plot the function   we can see where the graph crosses the x-axis. The points where it crosses the x-axis are the roots of $f(x)$. Don't worry about the code used to plot the function below. We will learn how to plot graphs later. Just run the cell."
+    "If we plot the function   we can see where the graph crosses the x-axis. The points where it crosses the x-axis are the roots of $f(x)$. Don't worry about the code used to plot the function below. We will learn how to plot graphs later. Just copy the code into Thonny and run it. Note that you need to add the matplotlib and numpy libraries to Thonny."
    ]
   },
   {
@@ -74,14 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function that we are finding the root of\n",
     "def fx(x):\n",
     "    \n",
     "    y = x**2 - 5*x + 6\n",
     "    \n",
     "    return y\n",
     "\n",
-    "# Derivative of the function that we are finding the root of\n",
     "def dfdx(x):\n",
     "    \n",
     "    y = 2*x - 5\n",
@@ -95,7 +93,7 @@
     "\n",
     "num_decimal_places = 4\n",
     "\n",
-    "for i in range(1,max_iter + 1):\n",
+    "for i in range(1,max_iter):\n",
     "\n",
     "    if abs(fx(x0)) < tolerance:\n",
     "        print(f'\\nThe root of the equation is {round(x0,num_decimal_places)}.\\n')\n",
@@ -132,7 +130,7 @@
     "The variation in temperature of a copper rod when a current is applied is given by the following first order differential equation:\n",
     "$$\\frac{dT}{dt}=\\frac{I^2R^{\\prime}_e-\\pi Dh\\left(T-T_{\\alpha}\\right)-\\pi D \\epsilon \\sigma \\left(T^4 - T^4_{sur}\\right)}{\\rho c \\left(\\pi D^2/4\\right)}$$\n",
     " \n",
-    "where $I=10$ A, $R^{\\prime}_e=0.4$ $\\frac{\\Omega}{\\text{m}}$, $T_{sur}=300$ K, $T_{\\alpha}=300$ K, $h=100$ $\\frac{\\text{W}}{\\text{m}^2}$, $\\epsilon=0.8$, $\\sigma=5.67 \\times 10^{-8}$ $\\frac{\\text{W}}{\\text{m}^2\\text{K}}$, $D=0.001$ m, $\\rho=8800$ $\\frac{\\text{kg}}{\\text{m}^3}$, $c=420$ $\\frac{\\text{J}}{\\text{kgK}}$.\n",
+    "where $I=10$ A, $R^{\\prime}_e=0.4$ $\\frac{\\Omega}{\\text{m}}$, $T_{sur}=300$ K, $T_{\\alpha}=300$ K, $h=100$ $\\frac{\\text{W}}{\\text{m}^2}$, $\\epsilon=0.8$, $\\sigma=5.67 \\times 10^{-8}$ $\\frac{\\text{W}}{\\text{m}^2\\text{K}}$, $D=1$ mm, $\\rho=8800$ $\\frac{\\text{kg}}{\\text{m}^3}$, $c=420$ $\\frac{\\text{J}}{\\text{kgK}}$.\n",
     "\n",
     "Find the steady state temperature values in kelvin by using the Newton method. Use an initial guess of 300 K and apply a tolerance value of 0.001.\n",
     "\n",
@@ -162,7 +160,7 @@
     "max_iter = 20 # This is the maximum number of iterations allowed\n",
     "tolerance = 1e-4 # Tolerance for which f(x) must be less than to determine root\n",
     "\n",
-    "for i in range(1,max_iter + 1):\n",
+    "for i in range(1,max_iter):\n",
     "\n",
     "    if abs(gx(x0)) < tolerance:\n",
     "        print(f'\\nThe root of the equation is {round(x0,4)}.\\n')\n",
@@ -182,7 +180,9 @@
    "source": [
     "## Exercises\n",
     "Modify the code above to incorporate the following features:\n",
+    "\n",
     "5.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, the third column gives  $x_1$, the fourth column gives $g(x_0)$, and the fifth column gives $g(x_1)$.\n",
+    "\n",
     "6.\tIf the root is not found within the maximum number of iterations, a message is output to the command window.\n",
     "\n",
     "## Problem 3\n",
@@ -190,7 +190,7 @@
     "\n",
     "$$\\frac{1}{f^{0.5}}=-2\\ln\\left(\\frac{\\epsilon/D}{3.7}+\\frac{2.51}{Ref^{0.5}}\\right)$$\n",
     " \n",
-    "where $\\epsilon=90e-6$ m is the roughness, $D=0.15$ m is the pipe diameter, $Re=3 \\times 10^5$  is the Reynold's number.\n",
+    "where $\\epsilon=90$  micron is the roughness, $D=0.15$ m is the pipe diameter, $Re=3 \\times 10^5$  is the Reynold's number.\n",
     "Find the friction factor $f$ by the secant method. Apply a tolerance value of 0.001 with initial guess values of 0.006 and 0.005.\n",
     "\n",
     "## Problem 4\n",
@@ -213,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
