--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -49,7 +49,7 @@
     "The Newton-Raphson method or Newton's method is a technique for solving equations numerically. Specifically, it approximates the roots of equations by making a guess at the root and then repeatedly updating the guess to arrive at a satisfactory approximation of the root.\n",
     "\n",
     "Consider a function $f(x)$ with a root at **o** as indicated in the diagram. Newton's method takes the following steps to estimate **o**:\n",
-    "Guess an initial value for the root $x_0$ .\n",
+    "Guess an initial value for the root $x_0$ .\n<br>",
     "1.\tThe slope at $f(x_0)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_1$.\n",
     "2.\tThe slope at $f(x_1)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_2$ .\n",
     "3.\tThis procedure is repeated until the root of $f(x)$ is determined within a specified tolerance.\n",
