--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -49,10 +49,12 @@
     "The Newton-Raphson method or Newton's method is a technique for solving equations numerically. Specifically, it approximates the roots of equations by making a guess at the root and then repeatedly updating the guess to arrive at a satisfactory approximation of the root.\n",
     "\n",
     "Consider a function $f(x)$ with a root at **o** as indicated in the diagram. Newton's method takes the following steps to estimate **o**:\n",
-    "Guess an initial value for the root $x_0$ .\n<br>",
-    "1.\tThe slope at $f(x_0)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_1$.\n",
-    "2.\tThe slope at $f(x_1)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_2$ .\n",
-    "3.\tThis procedure is repeated until the root of $f(x)$ is determined within a specified tolerance.\n",
+    "\n",
+    "\n",
+    "1.  Guess an initial value for the root $x_0$ .\n",
+    "2.\tThe slope at $f(x_0)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_1$.\n",
+    "3.\tThe slope at $f(x_1)$ is calculated. Where the slope crosses the x-axis is an updated guess for the root $x_2$ .\n",
+    "4.\tThis procedure is repeated until the root of $f(x)$ is determined within a specified tolerance.\n",
     "\n",
     "Note in the diagram how $x_1$ is closer to **o** than $x_0$ and that $x_2$ is closer than $x_1$.\n",
     "\n",
@@ -113,6 +115,7 @@
     "\n",
     "## Exercises\n",
     "Modify the code above to incorporate the following features:\n",
+    "\n",
     "1.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, and the third column gives  $f(x_0)$.\n",
     "2.  Put the code for the Newton method in a function. The input arguments for the function are the initial guess, maximum iterations, and the tolerance. The output arguments are a variable indicating whether the root is found and the root of the equation.\n",
     "3.  Call the function in 2 to find the root of the equation. Display appropriate messages to the shell indicating whether the root has been found and what it is.\n",
