--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -35,7 +35,7 @@
     "plt.plot(x, x**2-5*x+6)\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('f(x)')\n",
-    "plt.grid(b=True)\n",
+    "plt.grid(True)\n",
     "plt.show()"
    ]
   },
@@ -119,7 +119,6 @@
     "1.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, and the third column gives  $f(x_0)$.\n",
     "2.  Put the code for the Newton method in a function. The input arguments for the function are the initial guess, maximum iterations, and the tolerance. The output arguments are a variable indicating whether the root is found and the root of the equation.\n",
     "3.  Call the function in 2 to find the root of the equation. Display appropriate messages to the shell indicating whether the root has been found and what it is.\n",
-    "3.\tUse a `while` loop in place of a `for` loop.\n",
     "\n",
     "### Problem 1\n",
     "A cantilever beam is loaded with a distributed load. The deflection y of the centreline of the beam is a function of the position x:\n",
